--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,7 @@ html,
 .light,
 .light body,
 .light #root {
-  background-color: #ffffff;
+  background-color: #faf3f3d7;
   color: #181818;
   transition: background-color 0.3s, color 0.3s;
 }
@@ -23,7 +23,7 @@ html,
 .dark,
 .dark body,
 .dark #root {
-  background-color: #121212;
+  background-color: #1e1e1e;
   color: #f5f5f5;
   transition: background-color 0.3s, color 0.3s;
 }
