--- a/frontend/src/Componentes/Slider/SliderModule.css
+++ b/frontend/src/Componentes/Slider/SliderModule.css
@@ -1,6 +1,6 @@
-.slider-container {
+/* .slider-container {
   transition: background 0.3s ease, color 0.3s ease;
-}
+} */
 
 /* .light-theme {
   background: #f7f7f7;
