--- a/frontend/src/Componentes/Pages/PaymentHistory.module.css
+++ b/frontend/src/Componentes/Pages/PaymentHistory.module.css
@@ -2,6 +2,7 @@
   padding: 1rem;
   border-radius: 10px;
   max-width: 100%;
+  height: 70vh;
   margin: auto;
 }
 
@@ -19,6 +20,7 @@
   text-align: center;
   font-size: 1.5rem;
   margin-bottom: 1rem;
+  margin-top: 2rem;
 }
 
 .tableWrapper {
@@ -126,7 +128,7 @@ td {
   max-width: 500px;
   position: relative;
 }
-.paymentheader{
+.paymentheader {
   text-align: center;
   margin-bottom: 20px;
 }
