--- a/frontend/src/Componentes/Pages/PaymentHistory.module.css
+++ b/frontend/src/Componentes/Pages/PaymentHistory.module.css
@@ -2,7 +2,7 @@
   padding: 1rem;
   border-radius: 10px;
   max-width: 100%;
-  height: 70vh;
+  height: 100vh;
   margin: auto;
 }
 
@@ -145,7 +145,11 @@ td {
 .empty {
   text-align: center;
   font-style: italic;
-  margin-top: 2rem;
+  margin-top: 12rem;
+  font-size: 2rem;
+  font-weight: 600;
+  /* align-items: center; */
+  height: 100vh;
 }
 
 /* Responsive */
