--- a/frontend/src/Componentes/BlogList.module.css
+++ b/frontend/src/Componentes/BlogList.module.css
@@ -15,9 +15,10 @@
 }
 
 .heading {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 600;
-  margin-bottom: 1.5rem;
+  margin-top: 4rem;
+  margin-bottom: 1.8rem;
   text-align: center;
 }
 
