--- a/frontend/src/Componentes/Pages/Profile.module.css
+++ b/frontend/src/Componentes/Pages/Profile.module.css
@@ -1,7 +1,7 @@
 /* Theme-specific base styles using class from body or container */
 .container {
   max-width: 600px;
-  margin: 7rem auto;
+  margin: 4rem auto;
   margin-bottom: 20rem;
   padding: 1.5rem;
   border-radius: 12px;
@@ -14,6 +14,7 @@
 /* Heading */
 .container h2 {
   font-size: 2rem;
+  padding-top: 5rem;
   margin-bottom: 1.5rem;
   text-align: center;
 }
