--- a/frontend/src/Componentes/Pages/Cart.module.css
+++ b/frontend/src/Componentes/Pages/Cart.module.css
@@ -4,7 +4,7 @@
   min-height: 100vh;
   display: flex;
   gap: 25px;
-  padding: 20px;
+  /* padding: 20px; */
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
