--- a/frontend/src/Componentes/Pages/Contact/ContactInfo.module.css
+++ b/frontend/src/Componentes/Pages/Contact/ContactInfo.module.css
@@ -114,8 +114,8 @@ a {
 /* Mobile (480px and down) */
 @media (max-width: 480px) {
   .mainheader {
-    font-size: 1.2rem;
-    padding: 15px 10px;
+    font-size: 1rem;
+    /* padding: 15px 10px; */
   }
 
   .contactText {
