--- a/frontend/src/Componentes/Pages/Contact/Contact.module.css
+++ b/frontend/src/Componentes/Pages/Contact/Contact.module.css
@@ -23,7 +23,8 @@
 }
 
 .contact-container h2 {
-  margin-bottom: 30px;
+  margin-top: 60px;
+  margin-bottom: 20px;
   font-size: 2.5em;
   font-weight: bold;
   text-align: center;
